@@ -1,5 +1,6 @@
 1.15.19.alpha.1 - 14th February 2024
 - Updated ScrollFrameTemplate for Media.
+- Added flight times.
 
 1.15.18 - 14th February 2024
 - For 'Enhanced quest log' ('Interface'), fixed an issue with showing quest level suffixes for non-English locales.
